--- a/data-architect.html
+++ b/data-architect.html
@@ -205,15 +205,15 @@ dig?...</p>
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/NFolksLtd/743999698082186-oracle-data-architect-minneapolis-mn'>nFolks Ltd Oracle Data Architect -Minneapolis MN | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NFolksLtd/743999698082186-oracle-data-architect-minneapolis-mn'>nFolks Ltd Oracle Data Architect -Minneapolis MN | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Minneapolis, MNMinneapolis</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698067473-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698067473-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfoplusTechnologies1/743999698067033--immediate-need-for-data-architect-'>Infoplus Technologies "Immediate Need for Data Architect" | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/InfoplusTechnologies1/743999698067033--immediate-need-for-data-architect-'>Infoplus Technologies "Immediate Need for Data Architect" | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -221,7 +221,7 @@ dig?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698004842-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698004842-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -245,7 +245,7 @@ dig?...</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697967836-enterpise-data-architect'>Inmarsat Enterpise Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697967836-enterpise-data-architect'>Inmarsat Enterpise Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -265,7 +265,7 @@ dig?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/tsbjuot5qm5na1nnmajtmea3th'>Enterprise Data Architect | Manifest Solutions</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/tsbjuot5qm5na1nnmajtmea3th'>Enterprise Data Architect | Manifest Solutions</a></h5> 
 <p><span class="badge badge-light">Columbus, OH  Columbus</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -286,7 +286,7 @@ dig?...</p>
 <p>1 day ago ... Data Architect. Tallinn. Engineering ? Development Leads. Full-time. Submit your 
 application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697632997-enterpise-data-architect'>Inmarsat Enterpise Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697632997-enterpise-data-architect'>Inmarsat Enterpise Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -306,7 +306,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi'>
       Database Architect H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
@@ -320,7 +320,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51'>Ridango AS - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51'>Ridango AS - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -328,7 +328,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999697649915-analyst-data-architecture'>Publicis Groupe Analyst, Data Architecture | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999697649915-analyst-data-architecture'>Publicis Groupe Analyst, Data Architecture | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -372,7 +372,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NFOLKSLLC/743999689420714-big-data-solutions-architect-and-client-stater-bros-and-rate-130-hr-and-location-san-berdanhino-ca-and-duration-6-months'>NFOLKS LLC Big Data Solutions Architect and Client: Stater Bros and Rate: $130/hr and Location: San Berdanhino, CA and Duration: 6+ months | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/NFOLKSLLC/743999689420714-big-data-solutions-architect-and-client-stater-bros-and-rate-130-hr-and-location-san-berdanhino-ca-and-duration-6-months'>NFOLKS LLC Big Data Solutions Architect and Client: Stater Bros and Rate: $130/hr and Location: San Berdanhino, CA and Duration: 6+ months | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -380,7 +380,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/kalos/job/tksrzapahh3it9krqfpz8xwwey'>Lead Data Modeler Consultant (Data Architect) | Kalos Consulting, Inc.</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/kalos/job/tksrzapahh3it9krqfpz8xwwey'>Lead Data Modeler Consultant (Data Architect) | Kalos Consulting, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -418,7 +418,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/8a7gt1cek5a9nse98mta61fx9h'>Senior Data Engineer / Data Architect (Private Equity Company) | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/8a7gt1cek5a9nse98mta61fx9h'>Senior Data Engineer / Data Architect (Private Equity Company) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -466,7 +466,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cormac-corporation/job/ogokbfwT'>CORMAC Careers - Database Architect/ Database Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/cormac-corporation/job/ogokbfwT'>CORMAC Careers - Database Architect/ Database Developer</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -490,7 +490,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Albany, NY</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
