--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -41,7 +41,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://boards.greenhouse.io/coupang/jobs/1839852'>Job Application for Principal, iOS Engineer (iOS Engineering)  at Coupang</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qE1aVfwu&k=Job&j=oXNW9fwz&__jvst=Employee&__jvsd=sntZTgwt&__jvsc=Twitter&bid=nhPhqMw4'>WW International (formerly Weight Watchers) Careers - iOS Engineer (Senior Level)</a></h5> 
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698407941-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698407941-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -82,7 +82,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/notonthehighstreet/cc3f5205-5187-4ff8-a150-d02ce5552748'>Notonthehighstreet - iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/notonthehighstreet/cc3f5205-5187-4ff8-a150-d02ce5552748'>Notonthehighstreet - iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Richmond London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -98,7 +98,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Warsaw Warsaw  Barcelona Warsaw</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489115002'>Job Application for iOS Engineer - Customer Experience at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489115002'>Job Application for iOS Engineer - Customer Experience at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -152,7 +152,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qxs9VfwN&k=Job&j=oUyd5fwu&__jvst=Employee&__jvsd=sqJOpiw9&__jvsc=Twitter&bid=n1GQiMw6'>N3TWORK Careers - iOS Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qxs9VfwN&k=Job&j=oUyd5fwu&__jvst=Employee&__jvsd=sqJOpiw9&__jvsc=Twitter&bid=n1GQiMw6'>N3TWORK Careers - iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -172,7 +172,7 @@ QuintoAndar end-user applications for iOS; Write clean code and use code linting
 <p><span class="badge badge-light">Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/ffe59452-b9d8-4a4d-98e0-835b11db268c'>Xfers - Senior iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/ffe59452-b9d8-4a4d-98e0-835b11db268c'>Xfers - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -199,7 +199,7 @@ like? mobile applications. ? Experience with e-commerce applications in a?...</p
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/450042-devops-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN</a></h5> 
+<h5><a href='https://neugelb.join.com/jobs/450042-devops-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -215,7 +215,7 @@ like? mobile applications. ? Experience with e-commerce applications in a?...</p
 <p><span class="badge badge-light">Malaysia</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://inplayer.applytojob.com/apply/u0ghgfPCkI/Senior-IOS-Engineer'>Senior iOS Engineer - InPlayer - Career Page</a></h5> 
+<h5><a href='https://inplayer.applytojob.com/apply/u0ghgfPCkI/Senior-IOS-Engineer'>Senior iOS Engineer - InPlayer - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... You must be a passionate and experienced iOS developer who loves building 
 user facing iOS apps from scratch. You are proud of your code and can?...</p>
@@ -254,7 +254,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/4b26f9f3-bc97-4dd7-9f5c-755d39628523'>thredUP - Senior iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/thredup/4b26f9f3-bc97-4dd7-9f5c-755d39628523'>thredUP - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -312,7 +312,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912688'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912688'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
